# Clarity_AI

./: README.md  pyproject.toml
app/src/: async.py  main.py  parse.py  parser.py
app/tests/: input-test.txt  test_main.py  test_parse.py
